--- a/index.html
+++ b/index.html
@@ -7,8 +7,38 @@
 </head>
 
 <body style="background-color:darkred">
-    <div>
+    <img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:30%; max-width:30%; position:absolute; left: 100px; z-index: 1; min-width:10%; min-height: 10%;" />
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:30%; max-width:30%; position:absolute; left: 100px; z-index: 1; top:300px" />
+    <div class="containter" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
 
+    </div>
+    <h1 style="color:white; z-index:10; position:absolute; left: 475px; font-size:500%; font-family:Georgia;">Alexander Twigg: MIS/MIT</h1>
+    
+    <ul class="nav justify-content-center" style="position:absolute; top: 15%; left:25%; z-index:10;">
+            <li class="nav-item">
+                <a class="nav-link" href="atwigg18.github.io/index">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Skills</a>
+            </li>
+    </ul>
+    <div class="container-fluid"; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
+    <div class="container" style="height:70%; width:61.19%; position:absolute; left:23.15%; top: 20%; background-color:navajowhite;">
+        <h1>Welcome!</h1>
+        <h3>Purpose of Site:</h3>
+        <p>
+            ausdhfiasudbfliqawehbfqoaiuwedyfygasodiuhfgalsdkhjf
+        </p>
+        <h3>Introduction:</h3>
+        <p>
+            jasdbfliasdgbufioqurwegeoaijdfgoasudjnfiauwdshrasdf
+        </p>
     </div>
 </body>
 </html>
