borders I need to go to sleep

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
     </ul>
     <div class="container-fluid"; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
-    <div class="container" style="height:70%; width:61.19%; position:absolute; left:23.15%; top: 20%; background-color:navajowhite;">
+    <div class="container" style="height:70%; width:61.19%; position:absolute; left:23.15%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
         <h1>Welcome!</h1>
         <h3>Purpose of Site:</h3>
         <p>
