let's see if this works

--- a/projects.html
+++ b/projects.html
@@ -13,29 +13,29 @@
 
     </div>
     <h1 style="color:white; z-index:10; position:absolute; left: 475px; font-size:500%; font-family:Georgia;">Alexander Twigg: MIS/MIT</h1>
-    
+
     <ul class="nav justify-content-center" style="position:absolute; top: 15%; left:25%; z-index:10;">
-            <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/index">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/projects">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/skills">Skills</a>
-            </li>
+        <li class="nav-item">
+            <a class="nav-link" href="atwigg18.github.io/index">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="atwigg18.github.io/about">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="atwigg18.github.io/projects">Projects</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="atwigg18.github.io/skills">Skills</a>
+        </li>
     </ul>
-    <div class="container-fluid"; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
+    <div class="container-fluid" ; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
     <div class="container" style="height:70%; width:61.19%; position:absolute; left:23.15%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
-        <h1>Welcome!</h1>
-        <h3>Purpose of Site:</h3>
+        <h1>List of my Projects</h1>
+        <h3>This is going to be changed into a list.</h3>
         <p>
             ausdhfiasudbfliqawehbfqoaiuwedyfygasodiuhfgalsdkhjf
         </p>
-        <h3>Introduction:</h3>
+        <h3>It be like that:</h3>
         <p>
             jasdbfliasdgbufioqurwegeoaijdfgoasudjnfiauwdshrasdf
         </p>
