maybe this works who knows

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     
     <ul class="nav justify-content-center" style="position:absolute; top: 15%; left:25%; z-index:10;">
             <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/index">Home</a>
+                <a class="nav-link" href="/index">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/about">About</a>
+                <a class="nav-link" href="/about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/projects">Projects</a>
+                <a class="nav-link" href="/projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="atwigg18.github.io/skills">Skills</a>
+                <a class="nav-link" href="/skills">Skills</a>
             </li>
     </ul>
     <div class="container-fluid"; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
