attempting to get the url pathing done correctly

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <ul class="nav justify-content-center" style="position:absolute; top: 15%; left:25%; z-index:10;">
             <li class="nav-item">
-                <a class="nav-link" href="/index">Home</a>
+                <a class="nav-link active" href="/index">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
