--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <title>Alexander Twigg: OU MIS/MIT</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="atwigg18.css" />
 </head>
 
 <body style="background-color:darkred">
-    <img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:30%; max-width:30%; position:absolute; left: 100px; z-index: 1; min-width:10%; min-height: 10%;" />
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:30%; max-width:30%; position:absolute; left: 100px; z-index: 1; top:300px" />
-    <div class="containter" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
-
-    </div>
-    <h1 style="color:white; z-index:10; position:absolute; left: 475px; font-size:500%; font-family:Georgia;">Alexander Twigg: MIS/MIT</h1>
     
-    <ul class="nav justify-content-center" style="position:absolute; top: 15%; left:25%; z-index:10;">
+    <div class="col-3" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
+        <a class="nav-link active"href="www.ou.edu"><img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:75%; max-width:75%; position:absolute; left: 10%; z-index: 1; min-width:10%; min-height: 10%;" /></a>
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:70%; max-width:70%; position:absolute; left: 15%; z-index: 1; top:35%" />
+    </div>
+    <p class="text-center" style="color:white; z-index:10; position:absolute; left: 25%; font-size:500%; font-family:Georgia; min-height:10%; min-width:10%">Alexander Twigg</p>
+    
+    <ul class="nav justify-content-center;" style="position:absolute; top: 14.3%; left:23.5%; z-index:10;">
             <li class="nav-item">
                 <a class="nav-link active" href="/index">Home</a>
             </li>
@@ -28,8 +29,8 @@
                 <a class="nav-link" href="/skills">Skills</a>
             </li>
     </ul>
-    <div class="container-fluid"; style="background-color:lightgray; z-index:5; width:76.78%; height: 5%; position:absolute; top:15%; left:23.15%; border-right: 250px outset darkred;"></div>
-    <div class="container" style="height:70%; width:61.19%; position:absolute; left:23.15%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
+    <div class="col-10"; style="background-color:lightgray; z-index:5; width:76.05%; height: 5%; position:absolute; top:15%; left:23.93%; border-right: 190.5px outset darkred;"></div>
+    <div class="col-9" style="height:70%; width:61.19%; position:absolute; left:23.89%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
         <h1>Welcome!</h1>
         <h3>Purpose of Site:</h3>
         <p>
