--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color:darkred">
     
     <div class="col-3" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
-        <a class="nav-link active"href="www.ou.edu"><img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:75%; max-width:75%; position:absolute; left: 10%; z-index: 1; min-width:10%; min-height: 10%;" /></a>
+        <a class="nav-link active" href="www.ou.edu"><img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:75%; max-width:75%; position:absolute; left: 10%; z-index: 1; min-width:10%; min-height: 10%;" /></a>
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:70%; max-width:70%; position:absolute; left: 15%; z-index: 1; top:35%" />
     </div>
     <p class="text-center" style="color:white; z-index:10; position:absolute; left: 25%; font-size:500%; font-family:Georgia; min-height:10%; min-width:10%">Alexander Twigg</p>
@@ -32,13 +32,13 @@
     <div class="col-10"; style="background-color:lightgray; z-index:5; width:76.05%; height: 5%; position:absolute; top:15%; left:23.93%; border-right: 190.5px outset darkred;"></div>
     <div class="col-9" style="height:70%; width:61.19%; position:absolute; left:23.89%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
         <h1>Welcome!</h1>
-        <h3>Purpose of Site:</h3>
+        <h2>Purpose of Site:</h2>
         <p>
-            ausdhfiasudbfliqawehbfqoaiuwedyfygasodiuhfgalsdkhjf
+            This website is an assignment for my favorite class of my college career. MIS-3033.
         </p>
-        <h3>Introduction:</h3>
+        <h2>Introduction:</h2>
         <p>
-            jasdbfliasdgbufioqurwegeoaijdfgoasudjnfiauwdshrasdf
+            Take a look around.
         </p>
     </div>
 </body>
