--- a/skills.html
+++ b/skills.html
@@ -31,15 +31,13 @@
     </ul>
     <div class="col-10" ; style="background-color:lightgray; z-index:5; width:76.05%; height: 5%; position:absolute; top:15%; left:23.93%; border-right: 190.5px outset darkred;"></div>
     <div class="col-9" style="height:70%; width:61.19%; position:absolute; left:23.89%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
-        <h1>Welcome!</h1>
-        <h2>Purpose of Site:</h2>
-        <p>
-            This website is an assignment for my favorite class of my college career. MIS-3033.
-        </p>
-        <h2>Introduction:</h2>
-        <p>
-            Take a look around.
-        </p>
+        <h1>List of Skills:</h1>
+        <ul>
+            <li>Experienced in HTML, CSHTML, CSS, and Razor syntax.</li>
+            <li>More than familiar with creating WPF applications with C#.</li>
+            <li>Can utilize web services, databases, and ETL (Extract, Transform, Load).</li>
+            <li>Familiar with handling with MVC and API.</li>
+        </ul>
     </div>
 </body>
 </html>
