--- a/about.html
+++ b/about.html
@@ -31,14 +31,9 @@
     </ul>
     <div class="col-10" ; style="background-color:lightgray; z-index:5; width:76.05%; height: 5%; position:absolute; top:15%; left:23.93%; border-right: 190.5px outset darkred;"></div>
     <div class="col-9" style="height:70%; width:61.19%; position:absolute; left:23.89%; top: 20%; background-color:navajowhite; border-bottom: 20px solid white; border-right: 20px solid lightgray;">
-        <h1>Welcome!</h1>
-        <h2>Purpose of Site:</h2>
+        <h1>About Me:</h1>
         <p>
-            This website is an assignment for my favorite class of my college career. MIS-3033.
-        </p>
-        <h2>Introduction:</h2>
-        <p>
-            Take a look around.
+            My name is Alexander Scott Twigg, and I was born and raised in Southern California.  I graduated high school in 2013, and back then higher education was not something I aspired to.  So naturally I went to work, but my father heavily insisted that college was the way to go.  So I worked my way back in through community college, and eventually transfered out to the great University of Oklahoma.  The University of Oklahoma is where I found my passion in MIS, and programming.  I enjoyed it so much that I am now staying another year, by enrolling in the Master's MIT program.  I will be graduating spring 2020.
         </p>
     </div>
 </body>
