--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <body style="background-color:darkred">
     
-    <div class="col-3" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
+    <div class="col-sm-3" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
         <a class="nav-link active" href="www.ou.edu"><img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:75%; max-width:75%; position:absolute; left: 10%; z-index: 1; min-width:10%; min-height: 10%;" /></a>
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:70%; max-width:70%; position:absolute; left: 15%; z-index: 1; top:35%" />
     </div>
-    <p class="text-center" style="color:white; z-index:10; position:absolute; left: 25%; font-size:500%; font-family:Georgia; min-height:10%; min-width:10%">Alexander Twigg</p>
+    <p class="text-center;col-xs-3;" style="color:white; z-index:10; position:absolute; left: 25%; font-size:500%; font-family:Georgia; min-height:10%; min-width:10%">Alexander Twigg</p>
     
     <ul class="nav justify-content-center;" style="position:absolute; top: 14.3%; left:23.5%; z-index:10;">
             <li class="nav-item">
