--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body style="background-color:darkred">
 
     <div class="col-3" style="width: 20%; background-color: white; height: 100%; position:absolute; left: 50px; min-width:20%">
-        <a href="www.ou.edu">
+        <a class="nav-link" href="www.ou.edu">
             <img src="https://i.forbesimg.com/media/lists/colleges/university-of-oklahoma_416x416.jpg" style="width: auto; height: auto; max-height:75%; max-width:75%; position:absolute; left: 10%; z-index: 1; min-width:10%; min-height: 10%;" />
         </a>
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/University_of_Oklahoma_seal.svg/1200px-University_of_Oklahoma_seal.svg.png" style="width: auto; height: auto; max-height:70%; max-width:70%; position:absolute; left: 15%; z-index: 1; top:35%" />
